# Dynamic-Interface-Patcher

./: .gitignore  DIP.spec  DIP_cli.spec  DOCUMENTATION.md  Dynamic-Interface-Patcher.code-workspace  LICENSE  OfficialPatches.md  README.md  build.bat  build.py  build_fomod.bat  build_with_fomod.py  build_with_nuitka.py  pyproject.toml  requirements.txt  setup.py  version.yml
Example Patch/Patch/RaceMenu.bsa/interface/: racesex_menu.json
Example Patch/Patch/RaceMenu.bsa/interface/racemenu/: buttonart.json
fomod/: ModuleConfig.xml  info.xml
res/: ext_resources.json  resources.qrc  style.qss
res/config/: patch_creator_config.json
res/default_configs/: config.json
res/ffdec/: ffdec.bat  ffdec_orig.bat
res/glob/: dllmain.cpp  glob_cpp.sln  glob_cpp.vcxproj
scripts/: build.py  build_fomod.py
src/: app.py  bsa_extractor.py  errors.py  ffdec.py  main.py  patcher.py  resources_rc.py  utils.py
src/assets/: style.qss
src/assets/ffdec/: ffdec.bat
src/bsa_interface/: __init__.py  bsa_archive.py  datatypes.py  file_name_block.py  folder_record.py  header.py  utilities.py
src/core/archive/: archive.py  rar.py
src/core/bsa/: __init__.py  bsa_archive.py  file_record.py  header.py
src/core/cli_interface/: ffdec.py  xdelta.py
src/core/config/: _base_config.py  config.py  patch_creator_config.py
src/core/patch/: patch.py  patch_file.py  patch_item.py  patch_provider.py  patch_type.py
src/core/patch_creator/: patch_creator.py
src/core/patcher/: ffdec.py  patcher.py  xdelta.py
src/core/utilities/: cache.py  exception_handler.py  exe_info.py  filesystem.py  glob.py  licenses.py  logger.py  path_splitter.py  qt_res_provider.py  status_update.py  stdout_handler.py  thread.py  xml_utils.py
src/ui/: base_tab.py  main_widget.py  main_window.py  menubar.py  patch_creator_widget.py  patcher_widget.py  statusbar.py
src/ui/utilities/: theme_manager.py
src/ui/widgets/: browse_edit.py  error_dialog.py
tests/: base_test.py  utils.py
tests/core/patch/: test_patch_file.py
tests/core/utilities/: test_xml_utils.py
